apps/traefik/traefik-extras.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-extras
  labels:
    name: traefik-extras
