apps/traefik/traefik-redirect-to-dashboard-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: traefik-extras
  name: redirect-to-dashbaord
spec:
  redirectRegex:
    regex: ^https://([^\/]*)/$
    replacement: https://${1}/dashboard/
