apps/traefik/traefik-redirect-to-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: traefik-extras
  name: redirect-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
