apps/traefik/traefik-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: traefik-extras
  name: redirect-to-dashbaord
spec:
  redirectRegex:
    regex: ^https://([^\/]*)/$
    replacement: https://${1}/dashboard/
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-route
  namespace: traefik-extras
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`traefik.{domain:[a-z\.]+}`)
      middlewares:
        - name: redirect-to-dashbaord
          namespace: kube-system
      services:
        - name: traefik-dashboard
          namespace: kube-system
          port: 9000
  tls:
    secretName: traefik-server-tls
